[package]
name = "rust_addr_clean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
unicode-normalization = "0.1.22"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "clean_test_addresses"
harness = false