[package]
name = "us_addrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
unicode-normalization = "0.1.22"
crfs = "0.2"
clap = { version = "4.4.6", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "us_addrs"
path = "src/lib.rs"

[[bin]]
name = "us_addrs"
path = "src/main.rs"

[[bench]]
name = "clean_test_addresses"
harness = false

[[bench]]
name = "tag_addresses"
harness = false
