[package]
name = "us_addrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
unicode-normalization = "0.1.22"
clap = { version = "4.4.6", features = ["derive"] }
crfsuite = "0.3.1"
xml-rs = "0.8.19"
csv = "1.3.0"

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "us_addrs"
path = "src/lib.rs"

[[bin]]
name = "us_addrs"
path = "src/main.rs"

[[bench]]
name = "clean_test_addresses"
harness = false

[[bench]]
name = "tag_addresses"
harness = false
